# libmusictok

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmark/: cpword_benchmark.cpp  main.cpp  midilike_benchmark.cpp  mmm_benchmark.cpp  mumidi_benchmark.cpp  music_tokenizer_benchmark.cpp  octuple_benchmark.cpp  pertok_benchmark.cpp  remi_benchmark.cpp  structured_benchmark.cpp  tsd_benchmark.cpp
examples/myLibMusicTokApp/: CMakeLists.txt  README.md
examples/myLibMusicTokApp/src/: main.cpp
examples/myLibMusicTokApp/tokenizers/: MMM_tokenizer.json
include/libmusictok/: attribute_control.h  common.h  constants.h  event.h  tok_sequence.h  token_id_converter.h  tokenizer_config.h  utility_functions.h
include/libmusictok/tokenizations/: cpword.h  midilike.h  mmm.h  mumidi.h  music_tokenizer.h  octuple.h  pertok.h  remi.h  structured.h  tsd.h
resources/music_tokenizers/: MIDILike_tokenizer.json  MMM_tokenizer_MIDILike_base.json  MMM_tokenizer_TSD_base.json  REMI_tokenizer.json  TSD_tokenizer.json  cpword_tokenizer.json  mumidi_tokenizer.json  octuple_tokenizer.json  pertok_tokenizer.json  structured_tokenizer.json
resources/tokenizer_configs/: output_test.json  test_configs.json  tokenizer_config_for_preprocess_score_test.json
source/: attribute_control.cpp  event.cpp  tok_sequence.cpp  token_id_converter.cpp  tokenizer_config.cpp  utility_functions.cpp
source/tokenizations/: cpword.cpp  midilike.cpp  mmm.cpp  mumidi.cpp  music_tokenizer.cpp  octuple.cpp  pertok.cpp  remi.cpp  structured.cpp  tsd.cpp
test/: attribute_control_test.cpp  event_test.cpp  test_preprocess.cpp  test_tokenize.cpp  testing_utilities.hpp  tok_sequence_test.cpp  token_id_converter_test.cpp  tokenizer_config_test.cpp  tokenizers_cpp_test.cpp  utility_functions_test.cpp
